--- a/TicketTurno/package.json
+++ b/TicketTurno/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
+    "@astrojs/db": "^0.11.3",
     "@astrojs/preact": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
